--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -26,8 +26,8 @@ stages:
   jobs:
   - job: Build
     displayName: Build
-    pool:
-      vmImage: $(vmImageName)
+    pool: Default
+#      vmImage: $(vmImageName)
 
     steps:
     - task: NodeTool@0
@@ -61,8 +61,8 @@ stages:
   - deployment: Deploy
     displayName: Deploy
     environment: $(environmentName)
-    pool:
-      vmImage: $(vmImageName)
+    pool: Default
+#      vmImage: $(vmImageName)
     strategy:
       runOnce:
         deploy:
