--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -72,7 +72,8 @@ stages:
             inputs:
               azureSubscription: $(azureSubscription)
               appType: webAppLinux
-              appName: $(webAppName)
+              #appName: $(webAppName)
+              appName: self-hosted-open.privatelink.azurewebsites.net
               runtimeStack: 'NODE|10.10'
               package: $(Pipeline.Workspace)/drop/$(Build.BuildId).zip
               startUpCommand: 'npm run start'
